Fixed image alignments

--- a/style.css
+++ b/style.css
@@ -17,18 +17,19 @@
 }
 
 img {
-  width: 90%;
+  width: 250px;
+  /*text-align: center;*/
 }
 
-/*.info {
+.info {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
 }
 
 .info p {
-  flex-basis: 0;
-}*/
+  flex-grow: 1;
+}
 
 .name {
   text-transform: uppercase;
@@ -40,6 +41,8 @@ img {
 .email {
   text-transform: uppercase;
   color: gray;
+  margin-top: 0px;
+  font-size: 13px;
 }
 
 .address {
